--- a/Registro-Ingreso-Egreso-FaceAPI-main/public/register.html
+++ b/Registro-Ingreso-Egreso-FaceAPI-main/public/register.html
@@ -15,6 +15,15 @@
       <input type="text" id="op-code" placeholder="Código de Operario" disabled>
       <input type="text" id="name" placeholder="Nombre Completo" required>
       <input type="text" id="dni" placeholder="DNI" required>
+      <select id="area" required>
+        <option value="" disabled selected>Seleccionar Área</option>
+        <option value="Ventas">Ventas</option>
+        <option value="Recursos Humanos">Recursos Humanos</option>
+        <option value="TI">TI</option>
+        <option value="Operario">Operario</option>
+        <option value="Supervisor">Supervisor</option>
+        <option value="Gerente General">Gerente General</option>
+      </select>
     </div>
 
     <!-- Botón para verificar datos antes de tomar la foto -->
