mejora de front

--- a/Registro-Ingreso-Egreso-FaceAPI-main/public/acceso.html
+++ b/Registro-Ingreso-Egreso-FaceAPI-main/public/acceso.html
@@ -39,7 +39,7 @@
     <script>
         // Navegar a menu.html al hacer click
         document.getElementById('back-to-menu').addEventListener('click', () => {
-            window.location.href = 'menu.html';
+            window.location.href = 'inicio.html';
         });
     </script>
 </body>
