--- a/Registro-Ingreso-Egreso-FaceAPI-main/public/admin.html
+++ b/Registro-Ingreso-Egreso-FaceAPI-main/public/admin.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Operario</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-    </style>
 </head>
 <body>
     <div class="container">
         <h1>Bienvenido, <span id="user-name">Usuario</span> 👋</h1>
-        <button id="register-new-button" class="btn btn-primary">Registrar Nuevo Operario</button>
+
+        <!-- Botones -->
+        <div class="button-group">
+            <button id="register-new-button" class="btn btn-primary">Registrar Nuevo Operario</button>
+            <button id="admin-users-button" class="btn btn-primary">Administración de Usuarios</button>
+        </div>
     </div>
 
     <script>
@@ -22,6 +25,11 @@
         // Botón para ir a la página de registro
         document.getElementById('register-new-button').addEventListener('click', () => {
             window.location.href = 'register.html'; // cambiar según tu HTML de registro
+        });
+
+        // Botón para ir a administración de usuarios
+        document.getElementById('admin-users-button').addEventListener('click', () => {
+            window.location.href = 'admin-users.html'; // página de administración
         });
     </script>
 </body>
