--- a/frontend/orden.html
+++ b/frontend/orden.html
@@ -1,62 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orden de Producción</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Orden de Producción</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="app">
-        <!-- Encabezado -->
-        <header class="header">
-            <h1>Orden de Producción</h1>
-            <a href="index.html" class="btn">⬅ Volver</a>
-        </header>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <h2>Menú</h2>
+    <button class="btn-nav" onclick="mostrarPanel('panelMaterias')">➕ Agregar Materias</button>
+    <button class="btn-nav" onclick="mostrarPanel('panelCrearOrden')">📝 Crear Orden</button>
+    <button class="btn-nav" onclick="mostrarPanel('panelOrdenes')">📋 Órdenes de Producción</button>
+    <a href="index.html" class="btn-nav">⬅ Volver</a>
+  </aside>
 
-        <!-- Panel Crear Orden -->
-        <div class="panel">
-            <h2>Crear Nueva Orden</h2>
-            <form id="formCrearOrden">
-                <input type="text" id="ordenLote" placeholder="Nombre del lote" required>
+  <!-- Contenido principal -->
+  <div class="app">
+    <!-- Encabezado -->
+    <header class="header">
+      <h1>Orden de Producción</h1>
+    </header>
 
-                <!-- Lista de materias primas -->
-                <div id="materiasContainer">
-                    <div class="materia-row">
-                        <input type="text" placeholder="Nombre materia prima" class="materiaNombre" required>
-                        <input type="number" placeholder="Cantidad" class="materiaCantidad" min="0" required>
-                        <button type="button" class="btn btn-small btnAgregarMateria">Agregar</button>
-                    </div>
-                </div>
-
-                <ul id="materiasLista">
-                    <!-- Se agregan materias aquí -->
-                </ul>
-
-                <button type="submit" class="btn">Crear Orden</button>
-            </form>
-        </div>
-
-        <!-- Tabla de órdenes -->
-        <div class="panel">
-            <h2>Órdenes de Producción</h2>
-            <table class="orden-table">
-                <thead>
-                    <tr>
-                        <th>Lote</th>
-                        <th>Requerimientos</th>
-                        <th>Etapa</th>
-                        <th>Estado</th>
-                        <th>Movimientos</th>
-                    </tr>
-                </thead>
-                <tbody id="ordenBody">
-                    <!-- Se carga con JS -->
-                </tbody>
-            </table>
-        </div>
+    <!-- Panel Agregar Materias -->
+    <div class="panel" id="panelMaterias">
+      <h2>Agregar Materias Primas</h2>
+      <div class="materia-row">
+        <input type="text" placeholder="Nombre materia prima" class="materiaNombre" required>
+        <input type="number" placeholder="Cantidad" class="materiaCantidad" min="0" required>
+        <button type="button" class="btn btnAgregarMateria">Agregar</button>
+      </div>
+      <ul id="materiasLista">
+        <!-- Se agregan materias aquí -->
+      </ul>
     </div>
 
-    <script src="app.js"></script>
+    <!-- Panel Crear Orden -->
+    <div class="panel" id="panelCrearOrden" style="display:none;">
+      <h2>Crear Nueva Orden</h2>
+      <form id="formCrearOrden">
+        <input type="text" id="ordenLote" placeholder="Nombre del lote" required>
+        <button type="submit" class="btn">Crear Orden</button>
+      </form>
+    </div>
+
+    <!-- Panel Órdenes -->
+    <div class="panel" id="panelOrdenes" style="display:none;">
+      <h2>Órdenes de Producción</h2>
+      <table class="orden-table">
+        <thead>
+          <tr>
+            <th>Lote</th>
+            <th>Requerimientos</th>
+            <th>Etapa</th>
+            <th>Estado</th>
+            <th>Movimientos</th>
+          </tr>
+        </thead>
+        <tbody id="ordenBody">
+          <!-- Se carga con JS -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
+  <script>
+    // Función para mostrar solo un panel
+    function mostrarPanel(id) {
+      document.querySelectorAll('.panel').forEach(panel => {
+        panel.style.display = 'none';
+      });
+      document.getElementById(id).style.display = 'block';
+    }
+  </script>
 </body>
 </html>
