--- a/Registro-Ingreso-Egreso-FaceAPI-main/public/operario.html
+++ b/Registro-Ingreso-Egreso-FaceAPI-main/public/operario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Operario - Empresa de Alimentos</title>
-    <link rel="stylesheet" href="css/ingresoMP.css">
+    <link rel="stylesheet" href="css/ventas.css">
 </head>
 <body>
     <div class="dashboard">
