--- a/admin-users.html
+++ b/admin-users.html
@@ -4,35 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel de Administrador</title>
-  <link rel="stylesheet" href="css/admin.css">
-  <style>
-    /* Minimal CSS para que se vea bien y se destaque el modal */
-    body { font-family: Arial, sans-serif; margin:0; display:flex; height:100vh; background:#121212; color:#e0e0e0; }
-    .sidebar { width:220px; background:#1e1e1e; padding:20px; border-right:1px solid #333; }
-    .sidebar h2 { text-align:center; margin-bottom:20px; color:#55a630; }
-    .sidebar ul { list-style:none; padding:0; }
-    .sidebar li { margin-bottom:15px; }
-    .sidebar button { width:100%; padding:10px; border:none; border-radius:6px; background:#2a2a2a; color:#e0e0e0; cursor:pointer; font-weight:bold; }
-    .sidebar button:hover { background:#55a630; color:#000; }
-    .main-content { flex:1; padding:20px; overflow:auto; }
-    h1, h2 { margin-bottom:20px; color:#fff; }
-    .seccion { display:none; background:#1e1e1e; padding:20px; border-radius:8px; margin-bottom:20px; }
-    table { width:100%; border-collapse:collapse; margin-top:10px; }
-    th, td { border:1px solid #333; padding:8px; text-align:left; }
-    th { background:#2a2a2a; }
-    tr:hover { background:#333; }
-    .btn-edit, .btn-delete { padding:4px 8px; border:none; border-radius:4px; cursor:pointer; }
-    .btn-edit { background:#3498db; color:white; }
-    .btn-delete { background:#e74c3c; color:white; }
-
-    /* Modal */
-    .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; }
-    .modal-content { background:#1e1e1e; padding:20px; border-radius:8px; width:400px; }
-    .modal-content h3 { margin-bottom:15px; }
-    .modal-content label { display:block; margin:10px 0 5px; }
-    .modal-content input, .modal-content select { width:100%; padding:8px; border-radius:4px; border:1px solid #333; background:#2a2a2a; color:#e0e0e0; }
-    .modal-content button { margin-top:15px; width:48%; }
-  </style>
+  <link rel="stylesheet" href="css/admin-users.css">
 </head>
 <body>
   <!-- Sidebar -->
@@ -40,24 +12,25 @@
     <h2>Administrador</h2>
     <ul>
       <li><button onclick="mostrarSeccion('usuarios')">Gestión de Usuarios</button></li>
-      <li><button onclick="mostrarSeccion('accesos')">Accesos a la Base</button></li>
+      <li><button onclick="mostrarSeccion('accesos')">Historial de Accesos</button></li>
     </ul>
   </aside>
 
-  <!-- Contenido principal -->
+  <!-- Main content -->
   <main class="main-content">
     <h1>Panel de Administrador</h1>
 
-    <!-- SECCIÓN USUARIOS -->
+    <!-- Sección Usuarios -->
     <div id="usuarios" class="seccion">
       <h2>Usuarios</h2>
+      <button class="btn btn-edit btn-volver" onclick="window.location.href='rrhh.html'">Volver Inicio</button>
       <table id="tablaUsuarios">
         <thead>
           <tr>
             <th>ID</th>
             <th>DNI</th>
             <th>Nombre</th>
-            <th>Tipo</th>
+            <th>Estado</th>
             <th>Área</th>
             <th>Creado en</th>
             <th>Acciones</th>
@@ -67,9 +40,10 @@
       </table>
     </div>
 
-    <!-- SECCIÓN ACCESOS -->
+    <!-- Sección Accesos -->
     <div id="accesos" class="seccion">
       <h2>Accesos</h2>
+      <button class="btn btn-edit btn-volver" onclick="window.location.href='rrhh.html'">Volver Inicio</button>
       <table id="tablaAccesos">
         <thead>
           <tr>
@@ -85,7 +59,7 @@
     </div>
   </main>
 
-  <!-- MODAL EDICIÓN USUARIO -->
+  <!-- Modal edición -->
   <div id="modalEditar" class="modal">
     <div class="modal-content">
       <h3>Editar Usuario</h3>
@@ -108,7 +82,7 @@
     </div>
   </div>
 
-  <!-- Supabase y JS -->
+  <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="js/admin-users.js"></script>
 </body>
