--- a/rrhh.html
+++ b/rrhh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Operario</title>
+    <title>Area Operario</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,7 +14,8 @@
         <div class="button-group">
             <button id="register-new-button" class="btn btn-primary">Registrar Nuevo Operario</button>
             <button id="admin-users-button" class="btn btn-primary">Administración de Usuarios</button>
-        </div>
+            <button class="btn btn-primary btn-logout" onclick="window.location.href='index.html'">Cerrar sesión</button>
+        </div>        
     </div>
 
     <script>
