se agrega frontend de TI - correcciones en operario

--- a/operario.html
+++ b/operario.html
@@ -16,6 +16,7 @@
                 <li><button onclick="mostrarSeccion('vistaMP')">Listado Materias Primas</button></li>
                 <!-- Más opciones futuras -->
             </ul>
+            <button class="btn-logout" onclick="window.location.href='index.html'">Cerrar sesión</button>
         </aside>
 
         <!-- Contenido principal -->
