--- a/rrhh.html
+++ b/rrhh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Area Operario</title>
+    <title>Área Operario</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
