--- a/gg.html
+++ b/gg.html
@@ -72,8 +72,14 @@
             </div>
         </main>
     </div>
+    <!-- Cargar EmailJS v3 en navegador -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>
+  // Inicializar EmailJS
+  emailjs.init("SJ34lI1ytF8WPEMSi"); // Tu public key
+</script>
 
-    <script src="js/gg.js"></script>
+<script src="js/gg.js"></script>
     <script>
         function cerrarSesion() {
             localStorage.clear();
