orden de compra/supervisor y gerente general

--- a/prueba_gerente_supervisor/supervisor.html
+++ b/prueba_gerente_supervisor/supervisor.html
@@ -10,7 +10,7 @@
   <div class="sidebar">
     <h2>Supervisor</h2>
     <button onclick="mostrarSeccion('stock')">📦 Stock</button>
-    <button onclick="mostrarSeccion('requerimiento')">📝 Requerimiento</button>
+    <button onclick="mostrarSeccion('generar-requerimiento')">📝 Generar Requerimiento</button>
     <button onclick="mostrarSeccion('seguimiento')">📋 Seguimiento</button>
     <button onclick="mostrarSeccion('recepcion')">📥 Recepción</button>
     <button onclick="mostrarSeccion('incidencias')">⚠️ Incidencias</button>
@@ -36,8 +36,8 @@
       <button onclick="borrarDatos()">Borrar Todo</button>
     </section>
 
-    <!-- REQUERIMIENTO -->
-    <section id="requerimiento" class="seccion">
+    <!-- GENERAR REQUERIMIENTO -->
+    <section id="generar-requerimiento" class="seccion">
       <h2>Generar Requerimiento</h2>
       <form id="formRequerimiento">
         <label>Materia Prima:</label>
