Buscador en OV - cliente - producto

--- a/ventas.html
+++ b/ventas.html
@@ -152,7 +152,9 @@
           <form id="ordenForm">
             <div class="form-group">
               <label for="clienteOrden">Cliente:</label>
-              <select id="clienteOrden" required></select>
+              <select id="clienteOrden" required>
+                <option value="">Cargando clientes...</option>
+              </select>
             </div>
 
             <!-- Contenedor dinámico de productos -->
@@ -209,6 +211,12 @@
       </div>
     </main>
   </div>
+
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+  <!-- JS jQuery + Select2 -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
